# lenzr-server

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  compose.dev.yaml  compose.yaml  pyproject.toml
.github/workflows/: integration.yml
alembic/: env.py
alembic/versions/: 20251102_144507_26a2772ec6e8_generated_migration.py  20260404_142721_8b52c1b9f73b_add_tag_and_uploadtag_tables.py
scripts/: export_openapi.py
src/lenzr_server/: __init__.py  db.py  dependencies.py  exceptions.py  main.py  models.py  responses.py  routes.py  schemas.py  security.py  tag_service.py  thumbnail_service.py  types.py  upload_service.py
src/lenzr_server/file_storages/: file_storage.py  on_disk_file_storage.py
src/lenzr_server/models/: tags.py  uploads.py
src/lenzr_server/thumbnail_service/: __init__.py  in_memory.py  protocol.py
src/lenzr_server/upload_id_creators/: counting_id_creator.py  hashing_id_creator.py  id_creator.py
src/lenzr_server/webhook/: __init__.py  factory.py  http_notifier.py  notifier.py
tests/: conftest.py  test_api.py  test_app.py  test_models.py  test_openapi.py  test_security.py  test_tag_service.py  test_thumbnail_service.py  test_upload_service.py  test_webhook.py
tests/file_storages/: test_on_disk_file_storage.py
tests/models/: test_tags.py  test_uploads.py
tests/upload_id_creators/: test_counting_id_creator.py  test_hashing_id_creator.py
