[project]
name = "lenzr-server"
description = "Lenzr server application to manage images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Alicipy/lenzr-server"
Documentation = "https://github.com/Alicipy/lenzr-server"
Repository = "https://github.com/Alicipy/lenzr-server"
Issues = "https://github.com/Alicipy/lenzr-server/issues"

[project.scripts]
lenzr-server = "lenzr_server:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.11.2,<0.12.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
