[project]
name = "lenzr-server"
description = "Lenzr server application to manage images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Alicipy/lenzr-server"
Documentation = "https://github.com/Alicipy/lenzr-server"
Repository = "https://github.com/Alicipy/lenzr-server"
Issues = "https://github.com/Alicipy/lenzr-server/issues"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.11.2,<0.12.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
