[project]
name = "lenzr-server"
description = "Lenzr server application to manage images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.115.8",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.27",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Alicipy/lenzr-server"
Documentation = "https://github.com/Alicipy/lenzr-server"
Repository = "https://github.com/Alicipy/lenzr-server"
Issues = "https://github.com/Alicipy/lenzr-server/issues"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.11.2,<0.12.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]

[tool.ruff]
# Enable all default rules and extensions
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "F", "UP", "I"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"


[tool.alembic]

script_location = "%(here)s/alembic"

prepend_sys_path = [
    "."
]
